# datapulse

./: .gitignore  PROJECT_OVERVIEW.md  README.md  setup.py  test_data.csv
.cursor/rules/: git-commit-push.mdc
.github/workflows/: eltpulse-managed-worker.yml
docs/: control-plane-scaling.md  gateway-runtimes.md
embedded_elt_builder/: __init__.py  pipeline_generator.py
embedded_elt_builder/auth/: __init__.py
embedded_elt_builder/cli/: main.py  scaffold.py  schedules.py  sensors.py
embedded_elt_builder/components/: __init__.py
embedded_elt_builder/schedules/: __init__.py
embedded_elt_builder/sensors/: __init__.py
embedded_elt_builder/web/: app_enhanced.py  credentials_config.py
examples/: eltpulse-pipeline.declaration.example.yaml
integrations/: .gitignore  LICENSE  README.md
integrations/agent/: .dockerignore  Dockerfile  README.md  package.json
integrations/azure-pipelines/: README.md
integrations/examples/: README.md
integrations/gateway/: Dockerfile  README.md  package-lock.json  package.json
integrations/gateways/: README.md
integrations/github-actions/: README.md
integrations/gitlab-ci/: README.md
integrations/gitops/: README.md
integrations/libraries/: README.md
integrations/managed-worker/: README.md  run-once.mjs
integrations/openapi/: README.md
integrations/probe/: README.md
scripts/: export-credentials-catalog.py  sensor_runner.py
web/: .env.example  middleware.ts  next.config.mjs  package-lock.json  package.json  vercel.json
web/app/: globals.css  (+1 more)
web/managed-worker-service/: main.py  pyproject.toml  vercel.json
(+306 files in other folders)
